--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,12 @@ line-height: 1.19;
 letter-spacing: 0.03em;
 color: black;
 float: left;
-align-items: center;    }
+align-items: center; 
+margin-bottom: 20px;   }
 .logo-link {
     font-weight: 500;
 font-size: 14px;
-line-height: 1.33;
+line-height: 1.14;
 letter-spacing: 0.02em;
 color: #212121;
 }
@@ -26,7 +27,7 @@ color: #212121;
 .nav-link {
     font-weight: 500;
 font-size: 14px;
-line-height: 1.33;
+line-height: 1,14;
 letter-spacing: 0.02em;
 color: #757575;
 }
@@ -35,6 +36,8 @@ color: #757575;
     color: #2196F3}
 
 .main {
+    padding-top: 200px;
+    padding-bottom: 280px;
    background: #2F303A;
 color: white;
 padding: 200px 452 px 280px 452px;
@@ -45,10 +48,8 @@ padding: 200px 452 px 280px 452px;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-line-height: 1,9;
-padding-top: 200px;
-padding-bottom: 40px;
-padding-left: 100px;
+line-height: 1,36;
+margin-bottom: 30px;
 
 } 
 .main-btn {
@@ -57,7 +58,7 @@ padding-left: 100px;
     padding: 10px 32px ;
     font-weight: 700;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1,88;
     letter-spacing: 0.06em;
     text-align: center;
     background: #2196F3;
@@ -71,11 +72,11 @@ padding-left: 100px;
 .title-hero {
     font-weight: bold;
 font-size: 14px;
-line-height: 16px;
+line-height: 1,14px;
 letter-spacing: 1.33;
 text-transform: uppercase;
 color: #212121;
-padding-top: 94px;
+margin-bottom: 10px;
 }
 .text-hero {
     font-weight: normal;
@@ -83,38 +84,41 @@ font-size: 14px;
 line-height: 2;
 letter-spacing: 0.03em;
 color: #757575;
-width: 270px;
-height: 75px;
+}
+.hero-cont {
+    width: 270px;
 margin-right: 30px;
-padding-top: 10px;
-margin-bottom: 10px;
+}
+
+.hero-cont:last-child {
+margin-right:  0;  
 }
 
 .about-title {
     font-style: normal;
 font-weight: bold;
 font-size: 36px;
-line-height: 2;
+line-height: 1,17;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
-padding-top: 94px;
+margin-bottom: 50px;
 }
 .team-title {
     font-style: normal;
 font-weight: bold;
 font-size: 36px;
-line-height: 2;
+line-height: 1,17;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;;
-padding-top: 94px;
+margin-bottom: 50px;
 }
 .name {
     font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 1.58;
+line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
@@ -123,29 +127,33 @@ color: #212121;
     font-style: normal;
 font-weight: normal;
 font-size: 16px;
-line-height: 1.58;
+line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
 color: #757575;
 }
 .footer {
-    background: #2F303A
+    background: #2F303A;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 .logo-footer {
     font-family: Raleway;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
-line-height: 2.58;
+line-height: 1,19;
 letter-spacing: 0.03em;
 color: white;
 display: block;
+line-height: 1,19px;
+margin-bottom: 20px;
 }
 .adress {
     font-style: normal;
 font-weight: 400;
 font-size: 14px;
-line-height: 2;
+line-height: 1,71;
 letter-spacing: 0.03em;
 color: #FFFFFF;
 }
@@ -153,7 +161,7 @@ color: #FFFFFF;
     font-style: normal;
 font-weight: normal;
 font-size: 14px;
-line-height: 2;
+line-height: 1,71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 }
@@ -166,16 +174,18 @@ color: rgba(255, 255, 255, 0.6);
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
-line-height: 2.58;
+line-height: 1,19;
 letter-spacing: 0.03em;
 color: #2196F3;
+line-height: 1,19;
+margin-bottom: 20px;
 } 
 .portfolio-btn {
     font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 2.17;
+line-height: 1,63;
 text-align: center;
 letter-spacing: 0.03em;
 color: black;
@@ -194,7 +204,7 @@ border-radius: 4px 4px 4px 4px;
 font-style: normal;
 font-weight: bold;
 font-size: 18px;
-line-height: 3;
+line-height: 2;
 letter-spacing: 0.06em;
 color: #212121;
 }
@@ -203,16 +213,13 @@ color: #212121;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
-line-height: 2.5;
+line-height: 1,88;
 letter-spacing: 0.03em;
 color: #757575;
 }
 
-.element-invisible {
-    text-indent: -9999em;
-    outline: 0;
-  }
-  ul {
+
+ul {
     list-style-type: none;
     }
     a {
@@ -248,18 +255,18 @@ a{
     background-color: #FFFFFF ;
 }
 .header-nav{
-    padding: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     display: flex;
-}
+    border-bottom: 1px solid #ECECEC;
+    }
 .container-main{
     background-color: #2F303A;
     width: 1200px;
-    height: 600px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    outline: 2px solid rgb(250, 249, 249);
-    }
+       }
   
  .container-header {
     width: 1200px;
@@ -273,7 +280,12 @@ a{
     padding-right: 15px;
     margin: 0 auto;
    }
- .team{  background-color: #F5F4FA;
+   .about{
+       padding-top: 50px;
+   }
+ .team{ 
+     padding-top: 94px;
+      background-color: #F5F4FA;
  }
 .header-list{
     display: flex;
@@ -290,22 +302,18 @@ a{
     display: flex;
     height: 80px;
     margin-bottom: -30px;
-    border-bottom: 1px solid #ECECEC;
-}
+ }
 .hero-list{
     display: flex;
     flex-basis: auto;
-    margin-top: -100px;
-    }
+       }
  .logo-nav {
      display: block;
      margin: 24px,25px;
      justify-content: center;
  }
  .header-item {align-items: center; 
-    margin-bottom: 32px;
-    margin-top: 32px; 
-    margin-left: 93px;
+       margin-left: 93px;
     }
 .header-item + .header-item{
     margin-left: 50px;
@@ -318,9 +326,7 @@ a{
   margin-left: -30px;
   margin-bottom: -30px;
   flex-wrap: nowrap;
-  padding-top: 50px;
-  padding-bottom: 94px;
-}
+  }
 .about-link + .about-link { margin-left: 30px;}
 .about-link {
     width: calc(100% / 3 -30px);
@@ -335,14 +341,16 @@ a{
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     margin-bottom: 94px;
-    border: 1px solid #ECECEC;}
+    border: 1px solid #ECECEC;
+    width: 270px;
+     
+}
     
 .team-list{
     display: flex;
     margin-left: -30px;
   margin-bottom: -30px;
   flex-wrap: nowrap;
-  padding-top: 50px;
 }
 .portfolio{
     display: flex;
@@ -352,13 +360,19 @@ a{
 .portolio-list{
 display: flex;
 align-items: center;
-margin: 50px;
+margin-bottom: 50px;
 justify-content: center;
 }
 .portfolio-btn {
-    margin: 8px;
-    border: none;
+    padding: 6px 22px 6px 22px ;
+      border: none;
 }
+.portfolio-btn :last-child {margin-right:  0;} 
+.portfolio-link{
+    margin-right: 8px;
+    justify-content: center;
+}
+
 .portfolio-item{
     display: flex;
     margin-left: -30px;
@@ -375,19 +389,33 @@ justify-content: center;
     outline: 1px solid #EEEEEE;
     border-radius: 0px 0px 4px 4px;
 }
+.portf-item {
+    display: flex;
+    display: block;
+    flex-basis: calc(100% / 9 -30px);
+    flex-wrap: wrap;
+    flex-basis:auto;
+    justify-content: center;}
+
 .container-footer {width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 60px;
+       padding-top: 60px;
     padding-bottom: 60px;
     margin: 0 auto;
     display: block;
     }
-       .img{
+    .footer-adress {
+        margin-bottom: 9px;     
+    }
+    .footer-adress:last-child {
+        margin-bottom: 0;  
+        }
+ .img{
     display: block;
+    width: 100%;
+    height: auto;
    }
 .name-link{
-    padding-top: 30px;
+    padding-top: 50px;
     padding-bottom: 30px;
     background-color: #FFFFFF;
 }
