--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ letter-spacing: 0.03em;
 color: black;
 float: left;
 align-items: center; 
-margin-bottom: 20px;   }
+  }
 .logo-link {
     font-weight: 500;
 font-size: 14px;
@@ -37,7 +37,7 @@ color: #757575;
 
 .main {
     padding-top: 200px;
-    padding-bottom: 280px;
+    padding-bottom: 200px;
    background: #2F303A;
 color: white;
 padding: 200px 452 px 280px 452px;
@@ -134,8 +134,8 @@ color: #757575;
 }
 .footer {
     background: #2F303A;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .logo-footer {
     font-family: Raleway;
@@ -185,7 +185,7 @@ margin-bottom: 20px;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 1,63;
+line-height: 26px;
 text-align: center;
 letter-spacing: 0.03em;
 color: black;
@@ -254,9 +254,12 @@ a{
     margin: 0 auto;
     background-color: #FFFFFF ;
 }
+.navigation{
+    display: flex;
+}
 .header-nav{
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     display: flex;
     border-bottom: 1px solid #ECECEC;
     }
@@ -278,10 +281,11 @@ a{
  .container-team{width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 94px;
     margin: 0 auto;
    }
    .about{
-       padding-top: 50px;
+       padding-top: 94px;
    }
  .team{ 
      padding-top: 94px;
@@ -300,9 +304,7 @@ a{
 }
 .header-cont {
     display: flex;
-    height: 80px;
-    margin-bottom: -30px;
- }
+    }
 .hero-list{
     display: flex;
     flex-basis: auto;
@@ -331,17 +333,22 @@ a{
 .about-link {
     width: calc(100% / 3 -30px);
     margin-left: 30px;
-    margin-bottom: 30px;
-}
+    }
+   .about-link :first-child {margin-left: 0;
+   }
 .team-name + .team-name {margin-left: 30px;}
 
-.team-name { width: calc(100% / 4 -30px);
+.team-name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+     width: calc(100% / 4 -30px);
     margin-left: 30px;
     margin-bottom: 30px;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    margin-bottom: 94px;
-    border: 1px solid #ECECEC;
+       border: 1px solid #ECECEC;
     width: 270px;
      
 }
@@ -374,32 +381,36 @@ justify-content: center;
 }
 
 .portfolio-item{
-    display: flex;
+        display: flex;
     margin-left: -30px;
   margin-bottom: -30px;
-    flex-basis: calc(100% / 9 -30px);
+  flex-wrap: wrap;
+      }
+.portf-name {
+    display: block;
+    display: flex;
+  flex-basis: calc(100% / 3 -30px);
     flex-wrap: wrap;
     flex-basis:auto;
     justify-content: center;
-    }
-.portf-name {margin-left: 30px;
+    margin-left: 30px;
     margin-bottom: 30px;
+     
 }
-.portf-name + .portf-name {margin-left: 30px;
-    outline: 1px solid #EEEEEE;
-    border-radius: 0px 0px 4px 4px;
+.portf-name + .portf-name { margin-left: 30px;
+   border-bottom: 1px solid #EEEEEE; 
+     
 }
 .portf-item {
     display: flex;
-    display: block;
-    flex-basis: calc(100% / 9 -30px);
+  display: block;
     flex-wrap: wrap;
     flex-basis:auto;
     justify-content: center;}
 
 .container-footer {width: 1200px;
-       padding-top: 60px;
-    padding-bottom: 60px;
+    padding-right: 15px;
+    padding-left: 15px;
     margin: 0 auto;
     display: block;
     }
@@ -409,24 +420,25 @@ justify-content: center;
     .footer-adress:last-child {
         margin-bottom: 0;  
         }
- .img{
+.img{
     display: block;
-    width: 100%;
     height: auto;
-   }
+    max-width: 100%;
+      }
 .name-link{
-    padding-top: 50px;
+    padding-top: 30px;
     padding-bottom: 30px;
     background-color: #FFFFFF;
 }
 .hero{
     padding-top: 94px;
-    padding-bottom: 50px;
-    }
+        }
 .portf-paragraph{
-    padding-left: 24px;
-    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  
 }  
-
+padding-left: 24px;
+padding-right: 20px
 
 
