--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,7 @@ a{
    }
    .about{
        padding-top: 94px;
+       padding-bottom: 200px;
    }
  .team{ 
      padding-top: 94px;
@@ -325,13 +326,11 @@ a{
 }
 .about-list{
   display: flex;  
-  margin-left: -30px;
-  margin-bottom: -30px;
-  flex-wrap: nowrap;
+   flex-wrap: nowrap;
   }
 .about-link + .about-link { margin-left: 30px;}
 .about-link {
-    width: calc(100% / 3 -30px);
+    width: calc (100% / 3 -30px);
     margin-left: 30px;
     }
    .about-link:first-child {margin-left: 0;
@@ -432,11 +431,6 @@ img{
     padding-top: 94px;
         }
 .portf-paragraph{
-    padding-top: 20px;
-    padding-bottom: 24px;
-  
-}  
-padding-left: 24px;
-padding-right: 20px
+    padding: 20px 24px;}
 
 
